[package]
name = "asyncfsm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive", "string"] }
fancy-regex = "0.13.0"
log = "0.4.21"
pest = "2.7.10"
pest_derive = "2.7.10"
regex = "1.10.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
thiserror = "1.0.61"