[package]
name = "asyncfsm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]

anyhow = "1.0.86"

clap = { version = "4.5.4", features = ["derive", "string"] }

fancy-regex = "0.13.0"

log = "0.4.21"

pest = "2.7.10"

pest_derive = "2.7.10"

regex = "1.10.4"

serde = { version = "1.0.203", features = ["derive"] }

serde_json = { version = "1.0.117", optional = true }

serde_yaml = { version = "0.9.34", optional = true }

csv = { version = "1.3.0", optional = true }

thiserror = "1.0.61"



[[bin]]

name = "textfsm"

path = "src/bin/textfsm.rs"



[dev-dependencies]



env_logger = "0.11.3"



[features]



default = ["clitable", "csv_export", "json", "yaml"]

clitable = ["dep:csv"]

csv_export = ["dep:csv"]

json = ["dep:serde_json"]

yaml = ["dep:serde_yaml"]
